--- a/static/dashboard.css
+++ b/static/dashboard.css
@@ -172,39 +172,38 @@ body {
 }
 
 @media (max-width: 640px) {
-  .dashboard-container {
+  .dashboard_container {
     flex-direction: column;
   }
-
   .sidebar {
     width: 100%;
+    height: auto;
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
-    padding: 10px;
+    padding: 10px; 
   }
-
   .profile {
     margin-bottom: 0;
   }
-
   .sidebar_nav {
     flex-direction: row;
     gap: 10px;
   }
-
   .main_content {
     padding: 15px;
   }
   .video_card video {
-  width: 20%;
-  height: 30vh;
-  border-radius: 8px;
+    width: 100%;
+    height: auto;
+    border-radius: 8px;
   }
   .videos_container {
-  grid-template-columns: repeat(2, minmax(250px, 1fr));
-  gap: 10px;
+    grid-template-columns: 1fr;
+    gap: 10px;
   }
 }
+
+
 
 
