--- a/static/dashboard.css
+++ b/static/dashboard.css
@@ -197,7 +197,7 @@ body {
   }
   .video_card video {
     width: 100%;
-    height: auto;
+    height: 30vh;
     border-radius: 8px;
   }
 }
@@ -207,7 +207,7 @@ body {
   }
   .video_card video {
     width: 100%;
-    height: auto;
+    height: 50vh;
     border-radius: 8px;
   }
 }
