--- a/static/dashboard.css
+++ b/static/dashboard.css
@@ -108,7 +108,6 @@ body {
   border-radius: 12px;
   box-shadow: 0 4px 10px rgba(0,0,0,0.05);
 }
-
 .videos_container {
   display: grid;
   grid-template-columns: repeat(3, minmax(250px, 1fr));
@@ -125,8 +124,8 @@ body {
 }
 
 .video_card video {
-  width: 50%;
-  height: 50vh;
+  width: 100%;   
+  height: auto;  
   border-radius: 8px;
 }
 
@@ -192,13 +191,12 @@ body {
     padding: 15px;
   }
   .videos_container {
-    grid-template-columns: 1fr;
+    grid-template-columns: 1fr;  
     gap: 10px;
   }
   .video_card video {
-    width: 100%;
-    height: 30vh;
-    border-radius: 8px;
+    width: 100%; 
+    height: auto;
   }
 }
 @media (min-width: 641px) and (max-width: 768px) {
@@ -207,7 +205,6 @@ body {
   }
   .video_card video {
     width: 100%;
-    height: 50vh;
-    border-radius: 8px;
+    height: auto;
   }
 }
